[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
]
description = "Python Qt node editor"
dependencies = ["qtpy"]
dynamic = ["version", "readme"]
keywords = []
name = "qtpynodeeditor"
requires-python = ">=3.9"
[[project.authors]]
name = "Ken Lauer"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
pyqt = ["PyQt6"]
pyqt5 = ["PyQt5"]
pyqt6 = ["PyQt6"]
pyside = ["PySide6"]
pyside6 = ["PySide6"]
test = ["pytest", "pytest-qt", "pytest-cov"]
doc = [
  "sphinx",
  "ipython",
  "numpydoc",
  "sphinx-copybutton",
  "sphinx_rtd_theme",
  "sphinxcontrib-jquery",
]

[options]
zip_safe = false
include_package_data = true

[tool.setuptools_scm]
write_to = "qtpynodeeditor/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtpynodeeditor*"]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"
